[gd_scene load_steps=3 format=3 uid="uid://bm6a7wkfig084"]

[ext_resource type="Texture2D" uid="uid://cl0am6bslnrfx" path="res://imgs/botones/list1.png" id="1_3ekdf"]
[ext_resource type="Script" uid="uid://b2dahridhxwna" path="res://botones/control_buttons.gd" id="2_gun07"]

[node name="list_button" type="Button"]
offset_right = 64.0
offset_bottom = 64.0
icon = ExtResource("1_3ekdf")
flat = true
script = ExtResource("2_gun07")

[connection signal="pressed" from="." to="." method="_on_pressed"]
